[package]
name = "DED_backend"
version = "0.1.0"
authors = ["Bryce Verdier <bryceverdier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
actix-web = "2"
actix-rt = "1"

diesel = { version = "1.4.3", features = ["postgres"] }

serde = "1.0"
serde_json = "1.0"
