[package]
name = "DED_backend"
version = "0.1.0"
authors = ["Bryce Verdier <bryceverdier@gmail.com>, Dwight Browne <dwight@dwightjbrowne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
actix-web = "2"
actix-rt = "1"

diesel = { version = "1.4.3", features = ["postgres"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
dotenv = "0.15.0"

[dev-dependencies]
num-traits = "0.2"
mockall = "0.6.0"
